--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -1374,160 +1374,71 @@
 
   <!--  Promotion -->
 
-     <h1>1xbet Para Yatırma ve &Ccedil;ekme Y&ouml;ntemleri</h1>
-     <br>
+<h1>1xbet Para Yatırma ve &Ccedil;ekme Y&ouml;ntemleri</h1>
 
      <div class="ampImgStyleDiv">
         <amp-img data-amp-auto-lightbox-disable   class="ampImgStyle" src="assets/img/1xbet_para_yatirma.webp" alt="1xbet_para_yatirma" width="280" height="158"></amp-img>
         
     </div>
-<p>
-<b>  <a href="https://ulams.com/1xbet.php">1xbet</a></b> bahis sitesi, finansal işlemler konusunda bahis oyuncularına çok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve düşük limitli para yatırma ve çekme yöntemleri bulabilirsiniz. 
-</p>
-<p>
-    Tek bir tıkla hesabınıza 7 gün 24 saat para yatırabilir ve çekimlerinizi de aynı şekilde hızlıca gerçekleştirebilirsiniz.
-</p>
-<p>
-    Gerek para yatırma gerekse para çekme işlemlerinde belirli alt ve üst limitler bulunuyor. Bu limitler zaman zaman ve yoğunluk durumuna göre esnetilebilmektedir.
-</p>
-<p>
-    Tüm yatırım ve çekim işlemlerinde ilave masraf söz konusu olmuyor. Bankanızın ya da ödeme sisteminizin aldığı ücretleri göz önünde bulundurarak sizin için en iyi yöntemi tercih edebilmek gibi bir imkanınız var.
-</p>
-
-<h3>
-    Para Yatırma
-</h3>
-
-<p><b><a href="https://ulams.com/1xbet-giris.php" >1xbet giriş</a> </b> yaptıktan sonra kullanabileceğiniz para yatırma yöntemleri şöyledir;
-</p>
+<p>Sitede yeni hesap a&ccedil;tıysanız veya a&ccedil;mayı d&uuml;ş&uuml;n&uuml;yorsanız, doğal olarak bahis hesabıma nasıl para yatırırım diye merak ediyorsunuz.</p>
+<p>En başta şunu belirtmekte fayda var.&nbsp;Bahis siteleri&nbsp;i&ccedil;inde para yatırma i&ccedil;in kullanılan y&ouml;ntemlerin sayısı a&ccedil;ısından a&ccedil;ık ara rakiplerinin &ouml;n&uuml;nde.</p>
+<h2>1xbet'e nasıl para yatırılır?</h2>
+<p><strong><a href="https://ulams.com/1xbet.php">1xbet</a></strong> bahis sitesi, finansal işlemler konusunda bahis oyuncularına &ccedil;ok sayıda ve farklı sistemlerde işlem yapabilme imkanı sunuluyor. Sitede her zaman geniş ve d&uuml;ş&uuml;k limitli para yatırma ve &ccedil;ekme y&ouml;ntemleri bulabilirsiniz.</p>
+<p>Para yatırırken kullanabileceğiniz toplam 51 adet&nbsp;<strong>1xbet para yatırma</strong>&nbsp;y&ouml;ntemi var.</p>
+<p>Tek bir tıkla hesabınıza 7 g&uuml;n 24 saat para yatırabilir ve &ccedil;ekimlerinizi de aynı şekilde hızlıca ger&ccedil;ekleştirebilirsiniz.</p>
+<p>Gerek para yatırma gerekse para &ccedil;ekme işlemlerinde belirli alt ve &uuml;st limitler bulunuyor. Bu limitler zaman zaman ve yoğunluk durumuna g&ouml;re esnetilebilmektedir.</p>
+<p>T&uuml;m yatırım ve &ccedil;ekim işlemlerinde ilave masraf s&ouml;z konusu olmuyor. Bankanızın ya da &ouml;deme sisteminizin aldığı &uuml;cretleri g&ouml;z &ouml;n&uuml;nde bulundurarak sizin i&ccedil;in en iyi y&ouml;ntemi tercih edebilmek gibi bir imkanınız var.</p>
+<p>Para yatırma işleminin s&uuml;resi, kullandığınız y&ouml;nteme g&ouml;re farklılık g&ouml;sterebiliyor. Bazı y&ouml;ntemlerde para, bahis hesabınıza anında ge&ccedil;erken bazılarında birka&ccedil; saati bulabiliyor.&nbsp;</p>
+<p>1xbet'e nasıl para yatırırım sorusunu cevaplarken, burada ki &ouml;nemli noktalardan birinin kullandığınız y&ouml;ntem olduğunu s&ouml;ylemek gerekiyor. Para yatırma y&ouml;ntemini se&ccedil;erken dikkat etmeniz gereken şey, sizin i&ccedil;in hangi y&ouml;ntemin daha kullanışlı olduğu.</p>
+<p>Misal genellikle mobilden bahis oynuyorsanız, QR ile yatırma y&ouml;ntemi sizin i&ccedil;in iyi bir tercih olabilir.&nbsp;</p>
+<p>Kullanılan 51 y&ouml;ntem i&ccedil;erisinden 10 tanesini tavsiye edilen metotlar kısmında &ouml;ne &ccedil;ıkarıyor. Dilerseniz bu para yatırma y&ouml;ntemleri ve limitlerine g&ouml;z atalım.</p>
 <ul>
-<li>
-<p>Banka havalesi</p>
-</li>
-<li>
-<p>Papara</p>
-</li>
-<li>
-<p>Cepbank</p>
-</li>
-<li>
-<p>Hızlı Cepbank</p>
-</li>
-<li>
-<p>Jeton Wallet</p>
-</li>
-<li>
-<p>Payfix</p>
-</li>
-<li>
-<p>Paykwik</p>
-</li>
-<li>
-<p>Astropay</p>
-</li>
-<li>
-<p>Hızlı QR</p>
-</li>
-<li>
-<p>Paygiga</p>
-</li>
-<li>
-<p>Kripto para (Bu b&ouml;l&uuml;mde şuan aktif 31 tane kripto para birimi bulunuyor.)</p>
-</li>
+<li><strong>Anında banka havalesi</strong>: Bu y&ouml;ntemde aktif olarak kullanılan 12 banka var. Enpara ve Finansbank ile en az 1 TL yatırabilirsiniz. Yapı Kredi, Ziraat Bankası, Denizbank, TEB ve PTT Bank ile en az 50 TL yatırabilirsiniz. Garanti Bankası ile en az 250 TL, İş Bankası ile en az 1200 TL, Akbank ile en az 1500 TL, Halkbank ile en az 1600 TL ve Vakıflar Bankası ile de en az 2700 TL yatırabilirsiniz. Bu y&ouml;ntemi kullanarak para yatırdığınızda, işlem anında ger&ccedil;ekleşiyor.</li>
+<li><strong>Cepbank</strong>: Bu y&ouml;ntemle en az 50 TL yatırabilirsiniz. Bu işlem de anında ger&ccedil;ekleşiyor.</li>
+<li><strong>QR Kodu</strong>: Bu y&ouml;ntemle en az 100 TL yatırabilirsiniz.</li>
+<li><strong>Paykasa Voucher</strong>: Bu y&ouml;ntemle para yatırmak i&ccedil;in Voucher tutarı 10 olmalı. Voucher kodunu girerek işlemi anında ger&ccedil;ekleştirebilirsiniz.</li>
+<li><strong>AstroPay Card</strong>: Bu y&ouml;ntemle en az 53 TL yatırabilirsiniz. Kart numarası, kod ve son kullanma tarihi ile işlemi anında ger&ccedil;ekleştirebilirsiniz.</li>
+<li><strong>Jeton Wallet</strong>&nbsp;(Jeton C&uuml;zdan): Bu y&ouml;ntemle en az 6 TL yatırabilirsiniz. Jeton C&uuml;zdan hesabınızın numarası ile işleminizi ger&ccedil;ekleştirebilirsiniz.</li>
+<li><strong>Papara</strong>: Bu y&ouml;ntemi kullanarak en az 50 TL yatırabilirsiniz. Papara kullanıcı adı ve şifrenizle işleminizi ger&ccedil;ekleştirebilirsiniz.</li>
+<li><strong>Bitcoin</strong>: Bu y&ouml;ntem i&ccedil;in asgari bir yatırma limiti bulunmuyor. Kare kodu okutarak işleminizi ger&ccedil;ekleştirebilmeniz m&uuml;mk&uuml;n.&nbsp;</li>
+<li><strong>Papara Yeni</strong>: Bu alternatif y&ouml;ntemle en az 50 TL yatırabilirsiniz. On haneli c&uuml;zdan numaranız ve ad-soyad ile işleminizi ger&ccedil;ekleştirebilirsiniz.</li>
 </ul>
-
-
-
-
-
-<p>Sitede para yatırma y&ouml;ntemleri s&uuml;rekli olarak değişiklik g&ouml;steriyor. Bu y&uuml;zden de aktif y&ouml;ntemler konusunda yatırım &ouml;ncesi canlı destek hattına bağlanarak bilgi alabilirsiniz. Ayrıca sitenin aktif para yatırma limitlerini de canlı yardım hattı &uuml;zerinden &ouml;ğrenebileceğinizi de unutmayın.</p>
+<p>Bu para yatırma y&ouml;ntemlerinin dışında kullanabileceğiniz Bitcoin tarzında, Etherium ve doge gibi &ccedil;ok sayıda kripto ile &ouml;deme y&ouml;ntemi mevcut. Bu kripto ve token ile &ouml;deme y&ouml;ntemlerinin sayısı da her ge&ccedil;en g&uuml;n artacakmış gibi g&ouml;r&uuml;n&uuml;yor.</p>
+<p>Firmanın sunduğu 50 para yatırma y&ouml;nteminden bazılarının, bizim &uuml;lkemizden kullanımının aktif olmadığını s&ouml;ylemek de yarar var.</p>
+<p>Para yatırma sayfasında bulunan b&ouml;lgenize g&ouml;re &ouml;deme sistemleri butonuna basarak, sadece T&uuml;rkiye i&ccedil;in aktif olan y&ouml;ntemleri g&ouml;rebilmeniz m&uuml;mk&uuml;n.</p>
+<p>Ayrıca para yatırma sayfasında, kullanılan y&ouml;ntemler site tarafından kategorilere ayrılmış. Bu kategoriler, para yatırma y&ouml;ntemlerinin t&uuml;r&uuml;ne g&ouml;re belirlenerek alt alta sıralanmış durumda.</p>
+<p>Jeton, Astropay kartı veya Paykasa y&ouml;ntemlerini kullanarak hesabınıza<strong>&nbsp;</strong>para yatırma işlemi yaparsanız, yatırdığınız tutarın %25&rsquo;i kadar bonus kazanıyorsunuz. Para yatırma işleminiz tamamlandığı an, bonus otomatik olarak hesabınıza y&uuml;kleniyor. Bu bonustan 24 saat i&ccedil;inde, en fazla bir defa faydalanabilirsiniz. Kazanabileceğiniz maksimum bonus tutarı 1000 TL.&nbsp;</p>
+<p>Bonusu alabilmek i&ccedil;in bahsi ge&ccedil;en 3 y&ouml;ntemden birisini kullanarak para yatırmanız gerekiyor. Kullanılan diğer para yatırma y&ouml;ntemleri i&ccedil;in sadece ilk yatırmanız i&ccedil;in bonus alabilirsiniz. %25 para yatırma bonusunu, 5 defa kombine bahislerde &ccedil;evirdiğiniz zaman &ccedil;ekebilmeniz m&uuml;mk&uuml;n. Bu &ccedil;evrim işlemini, en az 1.40 orana sahip ve 3 etkinlik i&ccedil;eren kombinelerle yapabiliyorsunuz.</p>
+<p>Sitede para yatırma y&ouml;ntemleri s&uuml;rekli olarak değişiklik g&ouml;steriyor. Bu y&uuml;zden de aktif y&ouml;ntemler konusunda yatırım &ouml;ncesi <a href="https://ulams.com/musteri-hizmetleri.php">1xbet m&uuml;şteri hizmetleri</a> canlı destek hattına bağlanarak bilgi alabilirsiniz.</p>
+<p>Ayrıca sitenin aktif para yatırma limitlerini de canlı yardım hattı &uuml;zerinden &ouml;ğrenebileceğinizi de unutmayın.</p>
+<p><a class="buttona" href="https://siteye.club/yonleniyor/1xbet/" target="_blank" rel="noopener">1xbet giriş yapmak i&ccedil;in tıkla!</a></p>
+<h2>1xbet Para Yatırma Bonusları</h2>
+<p>1xbet canlı bahis sitesi hem yeni hem de eski &uuml;yelerine yatırımları i&ccedil;in ilave bonus veriyor. Elbette bu bonuslar bazı &ouml;deme y&ouml;ntemleri i&ccedil;in ge&ccedil;erli olabiliyor. Eğer her bir para yatırma işleminiz i&ccedil;in bonus almak istiyorsanız kampanyalara mutlaka g&ouml;z atın deriz.</p>
+<p>Sitedeki en g&uuml;ncel para yatırma bonusları;</p>
+<ul>
+<li><p>İlk para yatırma bonusu yalnızca yeni &uuml;yelere 1 defaya mahsus olarak veriliyor. İlk yatırım tutarının %200&rsquo;&uuml; oranında ve maksimum 1.000 TL&rsquo;ye kadar bonus verilmekte. T&uuml;m yatırım y&ouml;ntemleri ge&ccedil;erlidir.</p></li>
+<li><p>Hoş geldin Bonusu Paketi yeni &uuml;ye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500&euro; bonus + 150 free spin olarak veriliyor. Detaylar <strong><a href="https://ulams.com/1xbet-bonus.php">1xbet Bonus</a></strong> sayfamızda yer almakta. Bu bonus i&ccedil;in de t&uuml;m yatırım y&ouml;ntemleri ge&ccedil;erli.</p></li>
+<li><p>Astropay ve Paykasa &ouml;deme sistemleri ile yapılan işlemlerde, yatırılan para tutarının %25'i kadar bonus veriliyor. 24 saat boyunca 1 kez alma hakkı var. Maksimum bonus tutarı ise 1.000 TL&rsquo;dir. Bonusu almak i&ccedil;in minimum yatırım tutarı 20 TL&rsquo;dir.</p></li>
+<li><p>Hızlı banka havalesi (Bank Expres), Trink ile yapılan her para yatırma işleminde 1.000 TL&rsquo;ye varan bonus verilmektedir. Yatırılan tutarın %25'i kadar bonus alınabilir. En az 20 TL yatırım yapanlar bonusa hak kazanıyor.</p></li>
+<li><p>Cepbank ile yapılan &ouml;demelerde de %25 oranında ve 1.000 TL&rsquo;ye kadar bonus almak m&uuml;mk&uuml;n. Her 24 saatte bir bonus alınabilir.</p></li>
+<li><p>Jeton y&ouml;ntemi ile para yatırma işlemlerinde (minimum para yatırma tutarı 5 EUR'dur), yatırılan tutarın %10&rsquo;u kadar olan kısmına promo kod olarak cashback verilmektedir.</p></li>
+</ul>
 <p>1xbet para &ccedil;ekme konusunda da bahis severlere &ccedil;ok avantajlı bir men&uuml; sağlıyor. Sitede ger&ccedil;ekleştirdiğiniz kazan&ccedil;ları kolaylıkla yeterli bakiyeniz olması durumunda &ccedil;ekebilirsiniz.</p>
-<div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
-
-
-<h3>Para Çekme</h3>
-
+<div class="buttondiv"><a class="buttona" href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla!</a></div>
+<h2>1xbet paramı nasıl &ccedil;ekerim?</h2>
+<p>Oyuncuların b&uuml;y&uuml;k &ccedil;oğunluğu, bahis sitelerinden para &ccedil;ekme olayına genellikle ş&uuml;pheyle yaklaşıyor. Bu konuda haklı olduklarını da s&ouml;ylemek lazım. Piyasada onlarca hatta y&uuml;zlerce dolandırıcı bahis sitesi var.</p>
+<p>Hesap a&ccedil;arken veya para yatırırken hi&ccedil;bir sorun yok ama iş para &ccedil;ekmeye gelince paranın &uuml;st&uuml;ne yatıyorlar.&nbsp;<strong>1xbet para &ccedil;ekme</strong>&nbsp;olayında, bırakın paranızı &ouml;dememeyi sizden belge bile talep etmiyor. &Ccedil;ok y&uuml;ksek miktarda ikramiyeleri, &ccedil;ekim talebinizle aynı g&uuml;n hatta aynı saat i&ccedil;inde &ouml;d&uuml;yor.</p>
+<p>Profesyonel bahis hizmeti vermeyi vizyon olarak se&ccedil;en firma, kullanıcılarına &ouml;deme yaparken de bunu olduk&ccedil;a hissettiriyor. 1xbet paramı nasıl &ccedil;ekerim diye merak ediyorsanız, firmanın kullandığı 35 para &ccedil;ekme y&ouml;ntemi olduğunu size hatırlatayım.</p>
 <ul>
-<li>
-<p>Astropay</p>
-</li>
-<li>
-<p>Jeton Wallet</p>
-</li>
-<li>
-<p>Sticpay</p>
-</li>
-<li>
-<p>Payfix</p>
-</li>
-<li>
-<p>Webmoney</p>
-</li>
-<li>
-<p>Papara</p>
-</li>
-<li>
-<p>Banka Havalesi</p>
-</li>
-<li>
-<p>Hızlı Havale</p>
-</li>
-<li>
-<p>Paygiga</p>
-</li>
-<li>
-<p>Kripto Para ( Bu se&ccedil;enekte şuan aktif olan 29 kripto para t&uuml;r&uuml; bulunuyor.)</p>
-</li>
+<li><strong>Banka Havalesi</strong>: Bu y&ouml;ntemle kısa s&uuml;rede ve belge yollamanıza gerek kalmadan para &ccedil;ekebilirsiniz. S&uuml;per banka havalesi ve anında banka havalesi ile en az 300 TL &ccedil;ekebilirsiniz. Hızlı banka havalesi (Bank Express) ile de en az 200 TL para &ccedil;ekme yapabilirsiniz.</li>
+<li><strong>E-c&uuml;zdan</strong>: Papara, Jeton Wallet, Payfix ve Perfect Money gibi para &ccedil;ekme y&ouml;ntemleri bu kategoride bulunuyor. Papara ile en az 300 TL, Jeton Wallet ve Perfect Money ile de en az 9 TL &ccedil;ekebilirsiniz.</li>
+<li><strong>&Ouml;n &ouml;demeli kart</strong>: Astropay Card ve Paykasa Voucher ile anında para &ccedil;ekebilirsiniz. Bu y&ouml;ntemlerle en az 9 TL para &ccedil;ekme işlemi yapabilirsiniz.</li>
+<li><strong>Kripto D&ouml;viz</strong>: Bitcoin ve Litecoin gibi kripto d&ouml;viz y&ouml;ntemleri bu kategoride bulunuyor. Bitcoin ile en az 55 TL, Litecoin ile de en az 1 TL para &ccedil;ekebilirsiniz.&nbsp;(Bu se&ccedil;enekte şuan aktif olan 29 kripto para t&uuml;r&uuml; bulunuyor)</li>
 </ul>
-<p>Firma, para &ccedil;ekme işlemlerinde her zaman hızlı hizmet sunuyor. 1 ile 20 dakika arasında t&uuml;m &ouml;demeler hesaplarınıza yatırılıyor. Aynı zamanda diğer bahis sitelerinin aksine platform hızlı bir şekilde d&uuml;ş&uuml;k limitlere para &ccedil;ekebilmenize olanak tanıyor. Tek haneli bakiyelerle bile para &ccedil;ekme işlemlerini yapabileceğiniz aktif y&ouml;ntemler bulunuyor.</p>
-<div class="buttondiv"><a class="buttona"  href="https://siteye.club/yonleniyor/1xbet/" target="_blank"> 1xbet giriş yapmak i&ccedil;in tıkla! </a></div>
-
- 
-
-<h2>
-    1xbet Para Yatırma Bonusları
-</h2>
-
-<p>
-    1xbet canlı bahis sitesi hem yeni hem de eski üyelerine yatırımları için ilave bonus veriyor. Elbette bu bonuslar bazı ödeme yöntemleri için geçerli olabiliyor. Eğer her bir para yatırma işleminiz için bonus almak istiyorsanız kampanyalara mutlaka göz atın deriz.
-</p>
-<p>
-    Sitedeki güncel para yatırma bonusları ise şunlar;
-</p>
-
-<ul>
-    <li>
-    <p> İlk para yatırma bonusu yalnızca yeni üyelere 1 defaya mahsus olarak veriliyor. İlk yatırım tutarının %200’ü oranında ve maksimum 1.000 TL’ye kadar bonus verilmekte. Tüm yatırım yöntemleri geçerlidir.
-    </p>
-    </li>
-    <li>
-    <p>Hoş geldin Bonusu Paketi yeni üye olanlara teklif edilen bir promosyondur. İlk 4 yatırıma 1.500€ bonus + 150 free spin olarak veriliyor. Detaylar <b><a href="https://ulams.com/1xbet-bonus.php">1xbet Bonus</a></b>  sayfamızda yer almakta. Bu bonus için de tüm yatırım yöntemleri geçerli.
-    </p>
-    </li>
-    <li>
-    <p>Astropay ve Paykasa ödeme sistemleri ile yapılan işlemlerde, yatırılan para tutarının %25'i kadar bonus veriliyor. 24 saat boyunca 1 kez alma hakkı var. Maksimum bonus tutarı ise 1.000 TL’dir. Bonusu almak için minimum yatırım tutarı 20 TL’dir.
-    </p>
-    </li>
-    <li>
-    <p>Hızlı banka havalesi (Bank Expres), Trink ile yapılan her para yatırma işleminde 1.000 TL’ye varan bonus verilmektedir. Yatırılan tutarın %25'i kadar bonus alınabilir. En az 20 TL yatırım yapanlar bonusa hak kazanıyor.
-    </p>
-    </li>
-    <li>
-    <p> Cepbank ile yapılan ödemelerde de %25 oranında ve 1.000 TL’ye kadar bonus almak mümkün. Her 24 saatte bir bonus alınabilir.
-    </p>
-    </li>
-    <li>
-    <p>Jeton yöntemi ile para yatırma işlemlerinde (minimum para yatırma tutarı 5 EUR'dur), yatırılan tutarın %10’u kadar olan kısmına promo kod olarak cashback verilmektedir.
-    </p>
-    </li>
-    
-    </ul>
-
-
-    <p>
-        1xbet para yatırma ve çekme yöntemleri ile ilgili daha detaylı bilgileri <b><a href="https://ulams.com/musteri-hizmetleri.php">1xbet müşteri hizmetlerinden</a> </b> öğrenebilirsiniz.
-    </p>
-
+<p>1xbet para &ccedil;ekme&nbsp;sırasında yapmanız gereken tek doğrulama, telefon numaranıza g&ouml;nderilen kodu siteye girmek.</p>
+<p>Bunun dışında siteye herhangi bir kimlik belgesi vs. g&ouml;ndermeniz istenmiyor. Kaliteli bahis sitelerinin neredeyse tamamında, b&ouml;yle bir imkanınız yok.</p>
+<p>1xbet, bu avantajıyla&nbsp;evraksız canlı bahis siteleri&nbsp;arasında rakiplerinin &ouml;n&uuml;nde. Firma sadece banka transfer y&ouml;ntemleri arasında bulunan Sepa ile para &ccedil;ekebilmek i&ccedil;in kimlik belgesi doğrulama istiyor.</p>
+<p>Yani kullanılan 35 y&ouml;ntemin yalnızca birisi i&ccedil;in belge talep ediliyor. Firmanın g&uuml;venilirliği ile ilgili birka&ccedil; bilgi vermek gerekirse de, Rusya&rsquo;da resmi bir kurum olarak hizmet verdiğini, İtalya Serie A resmi sponsoru olduğunu ve Premier Lig&rsquo;in de sponsorları arasında yer aldığını s&ouml;ylemek yeterli.</p>
     </div>
   </section>
 
