--- a/1xbet-para-yatirma.html
+++ b/1xbet-para-yatirma.html
@@ -68,7 +68,6 @@
     <link href="/assets/img/favicon.webp" rel="icon" type="image/x-icon" />
   
 
-<link rel="preload" as="image" href="/assets/img/1xbet_bonus.webp" />
 <link rel="preload" as="image" href="/assets/img/1xbet_giris_adresi.webp" />
 <link rel="preload" as="image" href="/assets/img/1xbet_incelemesi.webp" />
 <link rel="preload" as="image" href="/assets/img/1xbet_mobil_giris.webp" />
@@ -78,6 +77,8 @@
 <link rel="preload" as="image" href="/assets/img/licence.webp" />
 <link rel="preload" as="image" href="/assets/img/logo.webp" />
 <link rel="preload" as="image" href="/assets/img/sterne.webp" />
+<link rel="preload" as="image" href="/assets/img/finrax_crypto.png" />
+  
 
 <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
   
@@ -1412,7 +1413,11 @@
 <p>Sitede para yatırma y&ouml;ntemleri s&uuml;rekli olarak değişiklik g&ouml;steriyor. Bu y&uuml;zden de aktif y&ouml;ntemler konusunda yatırım &ouml;ncesi <a href="https://ulams.com/musteri-hizmetleri.php">1xbet m&uuml;şteri hizmetleri</a> canlı destek hattına bağlanarak bilgi alabilirsiniz.</p>
 <p>Ayrıca sitenin aktif para yatırma limitlerini de canlı yardım hattı &uuml;zerinden &ouml;ğrenebileceğinizi de unutmayın.</p>
 <p><a class="buttona" href="https://siteye.club/yonleniyor/1xbet/" target="_blank" rel="noopener">1xbet giriş yapmak i&ccedil;in tıkla!</a></p>
+      
 <h2>1xbet Para Yatırma Bonusları</h2>
+              <div style="text-align:center"><amp-img data-amp-auto-lightbox-disable  src="assets/img/finrax_crypto.png"  alt="cripto"  width="420" height="280"></amp-img></div>
+
+      
 <p>1xbet canlı bahis sitesi hem yeni hem de eski &uuml;yelerine yatırımları i&ccedil;in ilave bonus veriyor. Elbette bu bonuslar bazı &ouml;deme y&ouml;ntemleri i&ccedil;in ge&ccedil;erli olabiliyor. Eğer her bir para yatırma işleminiz i&ccedil;in bonus almak istiyorsanız kampanyalara mutlaka g&ouml;z atın deriz.</p>
 <p>Sitedeki en g&uuml;ncel para yatırma bonusları;</p>
 <ul>
