--- a/1xbet-bonus.html
+++ b/1xbet-bonus.html
@@ -69,12 +69,7 @@
         
         <link href="/assets/img/favicon.webp" rel="icon" type="image/x-icon" />
   
-  <link rel="preload" as="image" href="/assets/img/1xbet_bonus.webp" />
-        <link rel="preload" as="image" href="/assets/img/1xbet_giris_adresi.webp" />
-        <link rel="preload" as="image" href="/assets/img/1xbet_incelemesi.webp" />
-        <link rel="preload" as="image" href="/assets/img/1xbet_mobil_giris.webp" />
-        <link rel="preload" as="image" href="/assets/img/1xbet_musteri_hizmetleri.webp" />
-        <link rel="preload" as="image" href="/assets/img/1xbet_para_yatirma.webp" />
+        <link rel="preload" as="image" href="/assets/img/1xbet_bonus.webp" />
         <link rel="preload" as="image" href="/assets/img/bahisrator.webp" />
         <link rel="preload" as="image" href="/assets/img/licence.webp" />
         <link rel="preload" as="image" href="/assets/img/logo.webp" />
@@ -1489,8 +1484,8 @@
   <footer id="footer">
     <div class="container">
     <a href="https://ortuse.com/turkiyedeki-yasal-bahis-siteleri/" target="_blank">Yasal Bahis Siteleri</a> |
-    <a href="https://apkox.com">Yabancı Bahis Siteleri</a> |
-    <a href="https://iusra.com/" target="_blank"> Paralı Okey Siteleri</a> |
+    <a href="https://searab.com">Yabancı Bahis Siteleri</a> |
+    <a href="https://ugatx.com/" target="_blank"> Paralı Okey Siteleri</a> |
     <a href="https://hakgg.com" target="_blank">Canlı Bahis</a> |
     <a href="https://azbie.com" target="_blank">Bahis Siteleri</a> |
     <a href="https://livebetshare.com/1xbet-yeni-giris-adresi-2021/" target="_blank">Livebetshare.com</a> |
