--- a/1xbet.html
+++ b/1xbet.html
@@ -1508,8 +1508,8 @@ a[href^="/to/"]:hover:before {
   <footer id="footer">
     <div class="container">
     <a href="https://ortuse.com/turkiyedeki-yasal-bahis-siteleri/" target="_blank">Yasal Bahis Siteleri</a> |
-    <a href="https://apkox.com">Yabancı Bahis Siteleri</a> |
-    <a href="https://iusra.com/" target="_blank"> Paralı Okey Siteleri</a> |
+    <a href="https://searab.com">Yabancı Bahis Siteleri</a> |
+    <a href="https://ugatx.com/" target="_blank"> Paralı Okey Siteleri</a> |
     <a href="https://hakgg.com" target="_blank">Canlı Bahis</a> |
     <a href="https://azbie.com" target="_blank">Bahis Siteleri</a> |
     <a href="https://livebetshare.com/1xbet-yeni-giris-adresi-2021/" target="_blank">Livebetshare.com</a> |
