--- a/test.html
+++ b/test.html
@@ -22,7 +22,7 @@
 
 <meta property="og:url" content="https://ulams.com/1xbet.php"/>
 <meta property="og:title" content="1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri"/>
-<meta property="og:site_name" content="Canlı Bahis Siteleri"/>
+<meta property="og:site_name" content=" Bahis Siteleri"/>
 <meta property="og:image" content="https://ulams.com/assets/img/bahisrator.webp"/>
 
 <meta name="twitter:url" content="https://ulams.com/1xbet.php"/>
