--- a/1xbet.html
+++ b/1xbet.html
@@ -9,8 +9,8 @@
 <meta http-equiv="Content-Language" content="tr" />
 <meta name="location" content="Türkiye, tr, Turkey" />
 <meta name="language" content="tr-TR" />
-<link rel="alternate" href="https://ulams.com/1xbet.php" hreflang="tr-TR"/>
-<link rel="canonical" href="https://ulams.com/1xbet.php">
+<link rel="alternate" href="https://newdomain.com/1xbet.php" hreflang="tr-TR"/>
+<link rel="canonical" href="https://newdomain.com/1xbet.php">
 
 <title>1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri</title>
 <meta name="description" content="1xbet giriş yapmak istiyorsanız sayfamızdaki linkleri kullanarak sitenin en güncel giriş adresini kolayca öğrenebilirsiniz.">
@@ -20,15 +20,15 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-touch-fullscreen" content="yes">
 
-<meta property="og:url" content="https://ulams.com/1xbet.php"/>
+<meta property="og:url" content="https://newdomain.com/1xbet.php"/>
 <meta property="og:title" content="1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri"/>
 <meta property="og:site_name" content="Canlı Bahis Siteleri"/>
-<meta property="og:image" content="https://ulams.com/assets/img/bahisrator.webp"/>
+<meta property="og:image" content="https://newdomain.com/assets/img/bahisrator.webp"/>
 
-<meta name="twitter:url" content="https://ulams.com/1xbet.php"/>
+<meta name="twitter:url" content="https://newdomain.com/1xbet.php"/>
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri"/>
-<meta name="twitter:image:src" content="https://ulams.com/assets/img/bahisrator.webp"/>
+<meta name="twitter:image:src" content="https://newdomain.com/assets/img/bahisrator.webp"/>
 
 <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -48,7 +48,7 @@
          "telephone": "N/A",
          "image": {
          "@type": "ImageObject",
-         "url": "https://ulams.com/assets/img/1xbet_incelemesi.webp"
+         "url": "https://newdomain.com/assets/img/1xbet_incelemesi.webp"
        }
       },
       "reviewRating": {
@@ -66,7 +66,7 @@
        "name": "1xbet tanıtımı",
        "logo": {
          "@type": "ImageObject",
-         "url": "https://ulams.com/assets/img/bahisrator.webp"
+         "url": "https://newdomain.com/assets/img/bahisrator.webp"
          }
       }
    }
@@ -1519,7 +1519,7 @@ a[href^="/to/"]:hover:before {
     
     <div class="copyright">
     © 2021 
-    <a href="https://ulams.com">ulams.com</a>
+    <a href="https://newdomain.com">newdomain.com</a>
     | 1xbet bahis sitesi, güncel giriş adresi ve bonusları hakkında detaylı ve güncel bilgiler sağlar
     </div>
     <div class="credits">
