--- a/test.html
+++ b/test.html
@@ -9,8 +9,8 @@
 <meta http-equiv="Content-Language" content="tr" />
 <meta name="location" content="Türkiye, tr, Turkey" />
 <meta name="language" content="tr-TR" />
-<link rel="alternate" href="https://ulams.com/1xbet.php" hreflang="tr-TR"/>
-<link rel="canonical" href="https://ulams.com/1xbet.php">
+<link rel="alternate" href="https://ronnaldo.com/1xbet.php" hreflang="tr-TR"/>
+<link rel="canonical" href="https://ronnaldo.com/1xbet.php">
 
 <title>1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri</title>
 <meta name="description" content="1xbet giriş yapmak istiyorsanız sayfamızdaki linkleri kullanarak sitenin en güncel giriş adresini kolayca öğrenebilirsiniz.">
@@ -20,15 +20,15 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-touch-fullscreen" content="yes">
 
-<meta property="og:url" content="https://ulams.com/1xbet.php"/>
+<meta property="og:url" content="https://ronnaldo.com/1xbet.php"/>
 <meta property="og:title" content="1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri"/>
 <meta property="og:site_name" content=" Bahis Siteleri"/>
-<meta property="og:image" content="https://ulams.com/assets/img/bahisrator.webp"/>
+<meta property="og:image" content="https://ronnaldo.com/assets/img/bahisrator.webp"/>
 
-<meta name="twitter:url" content="https://ulams.com/1xbet.php"/>
+<meta name="twitter:url" content="https://ronnaldo.com/1xbet.php"/>
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:title" content="1XBET Detaylı Tanıtımı - 2021 1XBET Giriş Adresleri"/>
-<meta name="twitter:image:src" content="https://ulams.com/assets/img/bahisrator.webp"/>
+<meta name="twitter:image:src" content="https://ronnaldo.com/assets/img/bahisrator.webp"/>
 
 <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
@@ -48,7 +48,7 @@
          "telephone": "N/A",
          "image": {
          "@type": "ImageObject",
-         "url": "https://ulams.com/assets/img/1xbet_incelemesi.webp"
+         "url": "https://ronnaldo.com/assets/img/1xbet_incelemesi.webp"
        }
       },
       "reviewRating": {
@@ -66,7 +66,7 @@
        "name": "1xbet tanıtımı",
        "logo": {
          "@type": "ImageObject",
-         "url": "https://ulams.com/assets/img/bahisrator.webp"
+         "url": "https://ronnaldo.com/assets/img/bahisrator.webp"
          }
       }
    }
@@ -1507,10 +1507,10 @@ a[href^="/to/"]:hover:before {
   
   <footer id="footer">
     <div class="container">
-    <a href="https://ortuse.com/turkiyedeki-yasal-bahis-siteleri/" target="_blank">Yasal Bahis Siteleri</a> |
-    <a href="https://searab.com">Yabancı Bahis Siteleri</a> |
+    <a href="https://mulsera.com/turkiyedeki-yasal-bahis-siteleri/" target="_blank">Yasal Bahis Siteleri</a> |
+    <a href="https://ceeviz.com">Yabancı Bahis Siteleri</a> |
     <a href="https://ugatx.com/" target="_blank"> Paralı Okey Siteleri</a> |
-    <a href="https://hakgg.com" target="_blank">Canlı Bahis</a> |
+    <a href="https://instaqq.com" target="_blank">Canlı Bahis</a> |
     <a href="https://azbie.com" target="_blank">Bahis Siteleri</a> |
     <a href="https://livebetshare.com/1xbet-yeni-giris-adresi-2021/" target="_blank">Livebetshare.com</a> |
     <a href="https://gmees.com/" target="_blank">gmees.com</a>
@@ -1519,7 +1519,7 @@ a[href^="/to/"]:hover:before {
     
     <div class="copyright">
     © 2021 
-    <a href="https://ulams.com">ulams.com</a>
+    <a href="https://ronnaldo.com">ronnaldo.com</a>
     | 1xbet bahis sitesi, güncel giriş adresi ve bonusları hakkında detaylı ve güncel bilgiler sağlar
     </div>
     <div class="credits">
