--- a/1xbet-mobil-giris.html
+++ b/1xbet-mobil-giris.html
@@ -1397,6 +1397,12 @@
     1xbet Android Uygulaması
 </h2>
 
+<div class="ampImgStyleDiv">
+    <amp-img style="float: right;" data-amp-auto-lightbox-disable   class="ampImgStyle" src="assets/img/1xbet-mobil-uygulama.webp" alt="1xbet_mobil_uygulama" width="200" height="200"></amp-img>
+    
+</div>
+
+
         <p>
             1xbet sitesine, Android cihazlar ile erişim sağlamak için geliştirilmiş olan uygulamayı siteden ücretsiz olarak indirebilirsiniz. Kurulumun nasıl yapılacağını merak ediyorsanız çok basit. Aşağıdaki adımları izleyerek kısa sürede 1xbet Android Uygulaması kurulumunu gerçekleştirebilirsiniz.
         </p>
